# Hash-Index-KV-Store

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TASKS.md
.claude/: settings.json  settings.local.json
docs/: BENCHMARKING-GUIDE.md  benchmark-comparison-2026-04-06.md  benchmark-comparison-2026-04-07-early-drop.md  benchmark-comparison-2026-04-24-complete.md  benchmark-comparison-2026-04-24-lz77fix.md  benchmark-comparison-2026-04-24.md  benchmark-lz77-2026-04-24.md  benchmark-lz77-3way-2026-04-25.md  benchmark-master-summary-2026-04-07.md  benchmark-results-2026-03-30.md  telemetry-store-experiment.md
docs/benchmark-runs/2026-04-24/: conc-4w8r-kv-always.txt  conc-4w8r-kv-never.txt  conc-4w8r-lsm-never.txt  pay-100B-kv-never.txt  (+24 more)
docs/benchmark-runs/2026-04-24-lz77fix/: seq-nomiss-lsm-never.txt  summary.txt
scripts/: analyze-redis-compare.py  run-redis-benchmarks.sh
src/: bffp.rs  block.rs  bloom.rs  cli.rs  compaction.rs  crc.rs  db.rs  engine.rs  hash_index.rs  hint.rs  kvengine.rs  leveled.rs  lib.rs  lsmengine.rs  lz77.rs  main.rs  memtable.rs  record.rs  segment.rs  settings.rs  size_tiered.rs  sstable.rs  stats.rs  storage_strategy.rs  utils.rs  wal.rs  worker.rs
src/server/: dispatch.rs
tests/: bffp_ttl.rs  block_sstable.rs  bloom.rs  compact_async.rs  compact_tcp.rs  concurrency.rs  crc.rs  db.rs  hint.rs  kv_ttl.rs  leveled.rs  lsm_ttl.rs  lsm_ttl_atomic.rs  lsmengine.rs  lz77.rs  memtable.rs  mget_mset.rs  ping.rs  rustikli.rs  server_connection.rs  server_dispatch.rs  server_multi_worker.rs  sstable.rs  ttl_command.rs  worker.rs
(+11 files in other folders)
